--- a/src/AppBundle/Resources/config/doctrine/Product.Product.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Product.Product.orm.yml
@@ -1,4 +1,5 @@
 AppBundle\Entity\Product\Product:
+
     type: entity
     table: product
 
@@ -18,3 +19,18 @@ AppBundle\Entity\Product\Product:
         description: { type: text, nullable: true }
         ordinal: { type: integer }
         date_created: { type: datetime }
+
+    oneToOne:
+        featured_image:
+            targetEntity: AppBundle\Entity\Media\Image
+            joinColumn:
+                name: featured_image_id
+                referencedColumnName: id
+
+    oneToMany:
+        product_images:
+            targetEntity: AppBundle\Entity\Product\Image
+            mappedBy: product
+            orderBy: { 'ordinal': 'ASC' }
+            cascade: [all]
+            orphanRemoval: true
