image uploads and product publishing

--- a/src/AppBundle/Resources/config/doctrine/Media.Image.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Media.Image.orm.yml
@@ -4,8 +4,8 @@ AppBundle\Entity\Media\Image:
     table: image
 
     lifecycleCallbacks:
-        prePersist: [setDateCreatedToNow]
-        preUpdate: [setDateUpdatedToNow]
+        prePersist: [lifecycleFileUpload, setDateCreatedToNow]
+        preUpdate: [lifecycleFileUpload, setDateUpdatedToNow]
 
     id:
         id:
