--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,7 +5,11 @@ security:
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
         in_memory:
-            memory: ~
+            memory:
+                users:
+                    '%admin_username%':
+                        password: '%admin_password%'
+                        roles: ROLE_ADMIN
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -15,10 +19,10 @@ security:
 
         main:
             anonymous: ~
-            # activate different ways to authenticate
+            http_basic: ~
 
-            # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-            #http_basic: ~
+    access_control:
+        - { path: ^/admin, roles: ROLE_ADMIN }
 
-            # https://symfony.com/doc/current/security/form_login_setup.html
-            #form_login: ~
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
