--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -7,6 +7,8 @@ parameters:
     database_name: symfony
     database_user: root
     database_password: ~
+    admin_username: ~
+    admin_password: ~
     # You should uncomment this if you want to use pdo_sqlite
     #database_path: '%kernel.project_dir%/var/data/data.sqlite'
 
