ftp image uploads to configured ftp server

--- a/src/AppBundle/Resources/config/doctrine/Media.Image.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Media.Image.orm.yml
@@ -4,8 +4,8 @@ AppBundle\Entity\Media\Image:
     table: image
 
     lifecycleCallbacks:
-        prePersist: [lifecycleFileUpload, setDateCreatedToNow]
-        preUpdate: [lifecycleFileUpload, setDateUpdatedToNow]
+        prePersist: [setDateCreatedToNow, setDateUpdatedToNow]
+        preUpdate: [setDateUpdatedToNow]
 
     id:
         id:
