--- a/src/AppBundle/Resources/config/doctrine/Product.Product.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Product.Product.orm.yml
@@ -29,3 +29,4 @@ AppBundle\Entity\Product\Product:
             orderBy: { 'ordinal': 'ASC' }
             cascade: [all]
             orphanRemoval: true
+            fetch: EAGER
