--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -54,3 +54,6 @@ services:
             - { name: sonata.admin, manager_type: orm, label: Image, group: ~ }
         public: true
 
+    cache:
+        class: \Doctrine\Common\Cache\ApcCache
+        public: true
