--- a/src/AppBundle/Resources/config/doctrine/Product.Image.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Product.Image.orm.yml
@@ -24,3 +24,4 @@ AppBundle\Entity\Product\Image:
             joinColumn:
                 name: image_id
                 referencedColumnName: id
+            fetch: EAGER
