default base open graph image

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -39,6 +39,7 @@ twig:
     strict_variables: '%kernel.debug%'
     globals:
         uploads_url: '%uploads_url%'
+        default_open_graph_image: '%default_open_graph_image%'
 
 # Doctrine Configuration
 doctrine:
